--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-       <h1>Welcome, {{name}}</h1> 
+       <h1>Welcome, {{user_name}}</h1> 
     </body>
 </html>
